add other icon sets to demo

--- a/demo.html
+++ b/demo.html
@@ -11,10 +11,19 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <html>
 <head>
 
-  <title>core-iconset-svg</title>
+  <title>Core Icons Demo</title>
   <script src="../platform/platform.js"></script>
-  <link rel="import" href="core-icons.html">
   <link rel="import" href="../core-icon/core-icon.html">
+  <!-- load default set -->
+  <link rel="import" href="core-icons.html">
+  <!-- load the rest -->
+  <link rel="import" href="iconsets/av-icons.html">
+  <link rel="import" href="iconsets/communication-icons.html">
+  <link rel="import" href="iconsets/hardware-icons.html">
+  <link rel="import" href="iconsets/image-icons.html">
+  <link rel="import" href="iconsets/maps-icons.html">
+  <link rel="import" href="iconsets/notification-icons.html">
+  <link rel="import" href="iconsets/social-icons.html">
   <style shim-shadowdom>
     core-icon {
       transition: all 0.2s;
