--- a/core-icons.html
+++ b/core-icons.html
@@ -6,9 +6,4 @@ The complete set of contributors may be found at http://polymer.github.io/CONTRI
 Code distributed by Google as part of the polymer project is also
 subject to an additional IP rights grant found at http://polymer.github.io/PATENTS.txt
 -->
-<link rel="import" href="iconsets/action-icons.html">
-<link rel="import" href="iconsets/alert-icons.html">
-<link rel="import" href="iconsets/content-icons.html">
-<link rel="import" href="iconsets/file-icons.html">
-<link rel="import" href="iconsets/navigation-icons.html">
-<link rel="import" href="iconsets/toggle-icons.html">
+<link rel="import" href="iconsets/default-icons.html">
