Remove shadow, make the icon grow and change color on hover instead

--- a/demo.html
+++ b/demo.html
@@ -31,8 +31,9 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     }
 
     core-icon:hover {
-      -webkit-filter: drop-shadow( 1px 1px 1px #333 );
-      filter: drop-shadow( 1px 1px 1px #333 );
+      width: 48px !important;
+      height: 48px !important;
+      fill: #fb8c00;
     }
 
     h2 {
