--- a/iconsets/social-icons.html
+++ b/iconsets/social-icons.html
@@ -7,6 +7,7 @@ Code distributed by Google as part of the polymer project is also
 subject to an additional IP rights grant found at http://polymer.github.io/PATENTS.txt
 -->
 
+<link rel="import" href="../../core-icons/core-icons.html">
 <link rel="import" href="../../core-iconset-svg/core-iconset-svg.html">
 <core-iconset-svg id="social" iconSize="24">
 <svg><defs>
