--- a/iconsets/png-icons.html
+++ b/iconsets/png-icons.html
@@ -7,7 +7,7 @@ Code distributed by Google as part of the polymer project is also
 subject to an additional IP rights grant found at http://polymer.github.io/PATENTS.txt
 -->
 
-<link rel="import" href="../../core-icons/core-icons.html">
+<link rel="import" href="../../core-icon/core-icons.html">
 <core-iconset id="core-icons" src="../../core-action-icons/action-icons.png" width="24" iconSize="24"
     icons="drawer menu search dropdown close add trash refresh settings dialoga 
            left right down up grid contact account plus time marker 
