Recover iconsets from simplification

--- a/iconsets/notification-icons.html
+++ b/iconsets/notification-icons.html
@@ -50,6 +50,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 		<rect fill="none" width="24" height="24"/>
 	</g>
 </g>
+<g id="do-not-disturb">
+</g>
 <g id="bluetooth">
 	<g>
 		<g>
