--- a/social-icons.html
+++ b/social-icons.html
@@ -7,7 +7,8 @@ Code distributed by Google as part of the polymer project is also
 subject to an additional IP rights grant found at http://polymer.github.io/PATENTS.txt
 -->
 
-<link rel="import" href="../../core-iconset-svg/core-iconset-svg.html">
+<link rel="import" href="../core-icon/core-icon.html">
+<link rel="import" href="../core-iconset-svg/core-iconset-svg.html">
 <core-iconset-svg id="social" iconSize="24">
 <svg><defs>
 <g id="cake"><path d="M12,5.5c0.8,0,1.5-0.7,1.5-1.5c0-0.3-0.1-0.5-0.2-0.8L12,1l-1.3,2.2c-0.1,0.2-0.2,0.5-0.2,0.8C10.5,4.8,11.2,5.5,12,5.5z M18.5,8H13V6.5h-2V8H5.5C3,8,1,10,1,12.5c0,1.6,0.8,2.9,2,3.7V23h18v-6.8c1.2-0.8,2-2.2,2-3.7C23,10,21,8,18.5,8z M18.5,15c-0.7,0-1.3-0.3-1.8-0.7l-1.5-1.5l-1.5,1.5C13.3,14.7,12.7,15,12,15c-0.7,0-1.3-0.3-1.8-0.7l-1.5-1.5l-1.5,1.5C6.8,14.7,6.2,15,5.5,15C4.1,15,3,13.9,3,12.5S4.1,10,5.5,10h13c1.4,0,2.5,1.1,2.5,2.5S19.9,15,18.5,15z"/></g>
