--- a/hardware-icons.html
+++ b/hardware-icons.html
@@ -7,7 +7,8 @@ Code distributed by Google as part of the polymer project is also
 subject to an additional IP rights grant found at http://polymer.github.io/PATENTS.txt
 -->
 
-<link rel="import" href="../../core-iconset-svg/core-iconset-svg.html">
+<link rel="import" href="../core-icon/core-icon.html">
+<link rel="import" href="../core-iconset-svg/core-iconset-svg.html">
 <core-iconset-svg id="hardware" iconSize="24">
 <svg><defs>
 <g id="cast"><path d="M21,3H3C1.9,3,1,3.9,1,5v3h2V5h18v14h-7v2h7c1.1,0,2-0.9,2-2V5C23,3.9,22.1,3,21,3z M1,18v3h3C4,19.3,2.7,18,1,18z M1,14v2c2.8,0,5,2.2,5,5h2C8,17.1,4.9,14,1,14z M1,10v2c5,0,9,4,9,9h2C12,14.9,7.1,10,1,10z"/></g>
