--- a/image-icons.html
+++ b/image-icons.html
@@ -7,7 +7,8 @@ Code distributed by Google as part of the polymer project is also
 subject to an additional IP rights grant found at http://polymer.github.io/PATENTS.txt
 -->
 
-<link rel="import" href="../../core-iconset-svg/core-iconset-svg.html">
+<link rel="import" href="../core-icon/core-icon.html">
+<link rel="import" href="../core-iconset-svg/core-iconset-svg.html">
 <core-iconset-svg id="image" iconSize="24">
 <svg><defs>
 <g id="auto-fix"><polygon points="7.5,5.6 10,7 8.6,4.5 10,2 7.5,3.4 5,2 6.4,4.5 5,7 "/><polygon points="19.5,15.4 17,14 18.4,16.5 17,19 19.5,17.6 22,19 20.6,16.5 22,14 "/><polygon points="22,2 19.5,3.4 17,2 18.4,4.5 17,7 19.5,5.6 22,7 20.6,4.5 "/><path d="M14.4,7.3c-0.4-0.4-1-0.4-1.4,0L1.3,19c-0.4,0.4-0.4,1,0,1.4l2.3,2.3c0.4,0.4,1,0.4,1.4,0L16.7,11c0.4-0.4,0.4-1,0-1.4L14.4,7.3z M13.3,12.8l-2.1-2.1l2.4-2.4l2.1,2.1L13.3,12.8z"/></g>
