--- a/maps-icons.html
+++ b/maps-icons.html
@@ -7,7 +7,8 @@ Code distributed by Google as part of the polymer project is also
 subject to an additional IP rights grant found at http://polymer.github.io/PATENTS.txt
 -->
 
-<link rel="import" href="../../core-iconset-svg/core-iconset-svg.html">
+<link rel="import" href="../core-icon/core-icon.html">
+<link rel="import" href="../core-iconset-svg/core-iconset-svg.html">
 <core-iconset-svg id="maps" iconSize="24">
 <svg><defs>
 <g id="beenhere"><path d="M19,1H5C3.9,1,3,1.9,3,3l0,12.9c0,0.7,0.3,1.3,0.9,1.7L12,23l8.1-5.4c0.5-0.4,0.9-1,0.9-1.7L21,3C21,1.9,20.1,1,19,1z M10,16l-5-5l1.4-1.4l3.6,3.6l7.6-7.6L19,7L10,16z"/></g>
