--- a/notification-icons.html
+++ b/notification-icons.html
@@ -7,7 +7,8 @@ Code distributed by Google as part of the polymer project is also
 subject to an additional IP rights grant found at http://polymer.github.io/PATENTS.txt
 -->
 
-<link rel="import" href="../../core-iconset-svg/core-iconset-svg.html">
+<link rel="import" href="../core-icon/core-icon.html">
+<link rel="import" href="../core-iconset-svg/core-iconset-svg.html">
 <core-iconset-svg id="notification" iconSize="24">
 <svg><defs>
 <g id="adb"><path d="M5,16c0,3.9,3.1,7,7,7c3.9,0,7-3.1,7-7v-4H5V16z M16.1,4.4l2.1-2.1l-0.8-0.8l-2.3,2.3C14.2,3.3,13.1,3,12,3c-1.1,0-2.2,0.3-3.1,0.7L6.6,1.4L5.8,2.3l2.1,2.1C6.1,5.6,5,7.7,5,10v1h14v-1C19,7.7,17.9,5.6,16.1,4.4z M9,9C8.4,9,8,8.6,8,8s0.4-1,1-1c0.6,0,1,0.4,1,1S9.6,9,9,9z M15,9c-0.6,0-1-0.4-1-1s0.4-1,1-1c0.6,0,1,0.4,1,1S15.6,9,15,9z"/></g>
