--- a/demo.html
+++ b/demo.html
@@ -19,6 +19,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
   <link rel="import" href="av-icons.html">
   <link rel="import" href="communication-icons.html">
   <link rel="import" href="device-icons.html">
+  <link rel="import" href="editor-icons.html">
   <link rel="import" href="hardware-icons.html">
   <link rel="import" href="image-icons.html">
   <link rel="import" href="maps-icons.html">
