--- a/core-icons.html
+++ b/core-icons.html
@@ -6,7 +6,31 @@ The complete set of contributors may be found at http://polymer.github.io/CONTRI
 Code distributed by Google as part of the polymer project is also
 subject to an additional IP rights grant found at http://polymer.github.io/PATENTS.txt
 -->
+<!--
 
+`core-icons` is a utitliy import that includes the definition for the `core-icon` element, `core-iconset-svg` element, as well as an import for the default icon set.
+
+The `core-icons` directory also includes imports for additional icon sets that can be loaded into your project.
+
+Example loading icon set:
+
+    <link rel="import" href="../core-icons/maps-icons.html">
+
+To use an icon from one of these sets, first prefix your `core-icon` with the icon set name, followed by a colon, ":", and then the icon id.
+
+Example using icon from icon set:
+
+    <core-icon icon="maps:directions-bus"></core-icon>
+
+
+See [core-icon](#core-icon) for more information about working with icons.
+
+See [core-iconset](#core-iconset) and [core-iconset-svg](#core-iconset-svg) for more information about how to create a custom iconset.
+
+@group Polymer Core Elements
+@element core-icons
+@homepage polymer.github.io
+-->
 <link rel="import" href="../core-icon/core-icon.html">
 <link rel="import" href="../core-iconset-svg/core-iconset-svg.html">
 <core-iconset-svg id="icons" iconSize="24">
