--- a/core-icons.html
+++ b/core-icons.html
@@ -18,7 +18,7 @@ Example loading icon set:
 
 To use an icon from one of these sets, first prefix your `core-icon` with the icon set name, followed by a colon, ":", and then the icon id.
 
-Example using icon from icon set:
+Example using the directions-bus icon from the maps icon set:
 
     <core-icon icon="maps:directions-bus"></core-icon>
 
