--- a/demo/index.html
+++ b/demo/index.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <!--
-Copyright (c) 2014 The Polymer Project Authors. All rights reserved.
+Copyright (c) 2015 The Polymer Project Authors. All rights reserved.
 This code may only be used under the BSD style license found at http://polymer.github.io/LICENSE.txt
 The complete set of authors may be found at http://polymer.github.io/AUTHORS.txt
 The complete set of contributors may be found at http://polymer.github.io/CONTRIBUTORS.txt
@@ -11,37 +11,44 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <html>
 <head>
 
-  <title>core-icons</title>
-  <script src="../webcomponentsjs/webcomponents.js"></script>
-  <!-- load default set -->
-  <link rel="import" href="core-icons.html">
+  <title>iron-icons</title>
+
+  <!-- polyfill WebComponents, if needed -->
+  <script src="../../webcomponentsjs/webcomponents-lite.js"></script>
+
+  <!-- load layout classes -->
+  <link rel="import" href="../../paper-styles/classes/layout.html">
+
+  <!-- load default iconset -->
+  <link rel="import" href="../iron-icons.html">
+
   <!-- load the rest -->
-  <link rel="import" href="av-icons.html">
-  <link rel="import" href="communication-icons.html">
-  <link rel="import" href="device-icons.html">
-  <link rel="import" href="editor-icons.html">
-  <link rel="import" href="hardware-icons.html">
-  <link rel="import" href="image-icons.html">
-  <link rel="import" href="maps-icons.html">
-  <link rel="import" href="notification-icons.html">
-  <link rel="import" href="social-icons.html">
-  <!-- load roboto font -->
-  <link href='//fonts.googleapis.com/css?family=RobotoDraft:regular,bold&amp;lang=en' rel='stylesheet'>
+  <link rel="import" href="../av-icons.html">
+  <link rel="import" href="../communication-icons.html">
+  <link rel="import" href="../device-icons.html">
+  <link rel="import" href="../editor-icons.html">
+  <link rel="import" href="../hardware-icons.html">
+  <link rel="import" href="../image-icons.html">
+  <link rel="import" href="../maps-icons.html">
+  <link rel="import" href="../notification-icons.html">
+  <link rel="import" href="../social-icons.html">
+
   <style>
+
     body {
-      font-family: 'RobotoDraft', sans-serif;
+      font-family: sans-serif;
     }
 
     h2 {
       text-transform: capitalize;
     }
 
-    core-icon {
+    iron-icon {
       transition: all 0.2s;
       -webkit-transition: all 0.2s;
     }
 
-    core-icon:hover {
+    iron-icon:hover {
       fill: #fb8c00;
     }
 
@@ -67,31 +74,48 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     }
 
     .container {
-      min-width: 10em;
-      padding: 1em;
+      min-width: 20em;
+      padding: 1em 0.5em;
     }
 
     .container > div {
+      margin-top: 0.5em;
       color: black;
+      font-size: 0.8em;
     }
-  </style>
-</head>
-<body unresolved>
 
-  <template is="auto-binding">
-    <template repeat="{{iconset in $.meta.metaArray}}">
-      <h2>{{iconset.id}}</h2>
-      <h5>{{iconset.id === 'icons' ? 'The Default Set' : 'Import ' + iconset.id + '-icons.html'}}</h5>
-      <div class="set" horizontal wrap justified layout>
-        <template repeat="{{ icon in iconset.iconNames }}">
-          <span class="container" vertical center layout>
-            <core-icon icon="{{ iconset.id }}:{{ icon }}"></core-icon>
-            <div>{{ icon }}</div>
+  </style>
+
+</head>
+<body>
+
+  <template is="x-autobind">
+
+   <iron-meta type="iconset" list="{{iconsets}}"></iron-meta>
+
+    <template is="x-repeat" items='["icons", "av", "communication", "device",
+      "editor", "hardware", "image", "maps", "notification", "social"]'></template>
+    <template is="x-repeat" items="{{iconsets}}">
+
+      <h2>{{item.name}}</h2>
+
+      <div class="set horizontal wrap layout">
+
+        <iron-meta query="{{item.name}}" value="{{iconset}}" type="iconset"></iron-meta>
+
+        <template is="x-repeat" items="{{iconset.iconNames}}">
+
+          <span class="container vertical center layout">
+            <iron-icon icon="{{item}}"></iron-icon>
+            <div>{{item}}</div>
           </span>
+
         </template>
+
       </div>
+
     </template>
-    <core-iconset id="meta"></core-iconset>
+
   </template>
 
 </body>
