--- a/demo/index.html
+++ b/demo/index.html
@@ -101,7 +101,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
       <div class="set horizontal wrap layout">
 
-        <iron-meta-query key="{{item.name}}" value="{{iconset}}" type="iconset"></iron-meta-query>
+        <iron-meta-query type="iconset" key="{{item.name}}" value="{{iconset}}"></iron-meta-query>
 
         <template is="x-repeat" items="{{iconset.iconNames}}">
 
