--- a/demo/index.html
+++ b/demo/index.html
@@ -93,17 +93,13 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
    <iron-meta type="iconset" list="{{iconsets}}"></iron-meta>
 
-    <template is="x-repeat" items='["icons", "av", "communication", "device",
-      "editor", "hardware", "image", "maps", "notification", "social"]'></template>
     <template is="x-repeat" items="{{iconsets}}">
 
       <h2>{{item.name}}</h2>
 
       <div class="set horizontal wrap layout">
 
-        <iron-meta-query type="iconset" key="{{item.name}}" value="{{iconset}}"></iron-meta-query>
-
-        <template is="x-repeat" items="{{iconset.iconNames}}">
+        <template is="x-repeat" items="{{item.iconNames}}">
 
           <span class="container vertical center layout">
             <iron-icon icon="{{item}}"></iron-icon>
