updated element metadata

--- a/iron-icons.html
+++ b/iron-icons.html
@@ -27,7 +27,9 @@ See [iron-icon](#iron-icon) for more information about working with icons.
 
 See [iron-iconset](#iron-iconset) and [iron-iconset-svg](#iron-iconset-svg) for more information about how to create a custom iconset.
 
-@group Polymer Core Elements
+@group Iron Elements
+@demo demo/index.html
+@hero hero.svg
 @homepage polymer.github.io
 -->
 <link rel="import" href="../iron-icon/iron-icon.html">
