--- a/iron-icons.html
+++ b/iron-icons.html
@@ -6,7 +6,10 @@ The complete set of contributors may be found at http://polymer.github.io/CONTRI
 Code distributed by Google as part of the polymer project is also
 subject to an additional IP rights grant found at http://polymer.github.io/PATENTS.txt
 -->
-<!--
+
+<script>
+(function(){
+/**
 `iron-icons` is a utility import that includes the definition for the `iron-icon` element, `iron-iconset-svg` element, as well as an import for the default icon set.
 
 The `iron-icons` directory also includes imports for additional icon sets that can be loaded into your project.
@@ -26,10 +29,11 @@ See [iron-icon](#iron-icon) for more information about working with icons.
 
 See [iron-iconset](#iron-iconset) and [iron-iconset-svg](#iron-iconset-svg) for more information about how to create a custom iconset.
 
-@group Iron Elements
-@element iron-icons
+@polymerBehavior IronIcons
 @demo demo/index.html
--->
+*/
+  var IronIcons = {_dummy: 1}
+})()</script>
 
 <link rel="import" href="../iron-icon/iron-icon.html">
 <link rel="import" href="../iron-iconset-svg/iron-iconset-svg.html">
