--- a/iron-icons.html
+++ b/iron-icons.html
@@ -22,6 +22,10 @@ Example using the directions-bus icon from the maps icon set:
 
     <iron-icon icon="maps:directions-bus"></iron-icon>
 
+To load a subset of icons from one of the default `iron-icons` sets, you can
+use the [poly-icon](https://poly-icon.appspot.com/) tool. It allows you
+to select individual icons, and creates an iconset from them that you can
+use directly in your elements.
 
 See [iron-icon](#iron-icon) for more information about working with icons.
 
