--- a/iron-icons.html
+++ b/iron-icons.html
@@ -27,9 +27,9 @@ See [iron-icon](#iron-icon) for more information about working with icons.
 
 See [iron-iconset](#iron-iconset) and [iron-iconset-svg](#iron-iconset-svg) for more information about how to create a custom iconset.
 
-@group Polymer Core Elements
+@group Iron Elements
 @pseudoElement iron-icons
-@homepage polymer.github.io
+@demo demo/index.html
 -->
 <link rel="import" href="../iron-icon/iron-icon.html">
 <link rel="import" href="../iron-iconset-svg/iron-iconset-svg.html">
