a case where a <custom-style> isn't rewritten

--- a/demo/index.html
+++ b/demo/index.html
@@ -12,6 +12,9 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <head>
   <title>iron-icons demo</title>
   <script src="../../webcomponentsjs/webcomponents-lite.js"></script>
+  <!-- uncommenting this fixes the bug
+    <link rel="import" href="../../polymer/lib/elements/custom-style.html">
+  -->
   <link rel="import" href="../../paper-styles/demo-pages.html">
   <link rel="import" href="../../paper-styles/color.html">
   <link rel="import" href="../../iron-flex-layout/iron-flex-layout.html">
@@ -74,7 +77,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       }
 
       .set:nth-of-type(4n) {
-        color: var( --google-blue-500);
+        color: var(--google-blue-500);
       }
 
       .container {
@@ -95,38 +98,38 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     </style>
   </custom-style>
 
+  <dom-bind>
+    <template is="dom-bind">
+      <dom-repeat>
+        <template is="dom-repeat" items="[[iconsets]]">
+          <h2>[[item.name]]</h2>
+
+          <dom-repeat class="set">
+            <template is="dom-repeat" items="[[getIconNames(item)]]">
+              <span class="container">
+                <iron-icon icon="[[item]]"></iron-icon>
+                <div>[[item]]</div>
+              </span>
+            </template>
+          </dom-repeat>
+        </template>
+      </dom-repeat>
+    </template>
+  </dom-bind>
+
   <script>
     window.addEventListener('WebComponentsReady', function() {
       var iconsets = new Polymer.IronMeta({type: 'iconset'}).list;
 
-      iconsets.forEach(function(iconset) {
-        var fragment = document.createDocumentFragment();
+      var domBind = document.querySelector('dom-bind');
+      if (!Polymer.Element) {
+        domBind = domBind.querySelector('template[is=dom-bind]');
+      }
 
-        var title = document.createElement('h2');
-        title.textContent = iconset.name;
-        fragment.appendChild(title);
-
-        var set = document.createElement('div');
-        set.classList.add('set');
-        fragment.appendChild(set);
-
-        iconset.getIconNames().forEach(function(name) {
-          var container = document.createElement('span');
-          container.classList.add('container');
-
-          var icon = document.createElement('iron-icon');
-          icon.icon = name;
-          container.appendChild(icon);
-
-          var text = document.createElement('div');
-          text.textContent = name;
-          container.appendChild(text);
-
-          set.appendChild(container);
-        });
-
-        document.body.appendChild(fragment);
-      });
+      domBind.getIconNames = function(iconset) {
+        return iconset.getIconNames();
+      };
+      domBind.iconsets = iconsets;
     });
   </script>
 </body>
