Add variants for 1.x/2.x versions of iron-meta; use only compatible API in tests.

--- a/test/iron-icons.html
+++ b/test/iron-icons.html
@@ -45,7 +45,8 @@ suite('<iron-icons>', function() {
     ];
 
     setup(function() {
-      meta = Polymer.Base.create('iron-meta', {type: 'iconset'});
+      meta = document.createElement('iron-meta');
+      meta.type = 'iconset';
     });
 
     test('all uniquely named', function() {
