--- a/test/index.html
+++ b/test/index.html
@@ -1,4 +1,5 @@
-<!DOCTYPE html><!--
+<!DOCTYPE html>
+<!--
 @license
 Copyright (c) 2016 The Polymer Project Authors. All rights reserved.
 This code may only be used under the BSD style license found at http://polymer.github.io/LICENSE.txt
@@ -6,17 +7,16 @@ The complete set of authors may be found at http://polymer.github.io/AUTHORS.txt
 The complete set of contributors may be found at http://polymer.github.io/CONTRIBUTORS.txt
 Code distributed by Google as part of the polymer project is also
 subject to an additional IP rights grant found at http://polymer.github.io/PATENTS.txt
---><html><head>
-
+-->
+<html>
+<head>
   <meta charset="utf-8">
   <title>Tests</title>
-  <script src="../../../wct-browser-legacy/browser.js"></script>
-
+  <script src="../node_modules/wct-browser-legacy/browser.js"></script>
 </head>
 <body>
-
   <script>
     WCT.loadSuites(['iron-icons.html', 'iron-icons.html?dom=shadow']);
   </script>
-
-</body></html>
+</body>
+</html>
