--- a/test/iron-icons.html
+++ b/test/iron-icons.html
@@ -16,20 +16,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <script src="../../../@webcomponents/webcomponentsjs/webcomponents-bundle.js"></script>
-  <script src="../../../wct-browser-legacy/browser.js"></script>
-
-  <script type="module" src="../av-icons.js"></script>
-  <script type="module" src="../communication-icons.js"></script>
-  <script type="module" src="../device-icons.js"></script>
-  <script type="module" src="../editor-icons.js"></script>
-  <script type="module" src="../hardware-icons.js"></script>
-  <script type="module" src="../image-icons.js"></script>
-  <script type="module" src="../iron-icons.js"></script>
-  <script type="module" src="../maps-icons.js"></script>
-  <script type="module" src="../notification-icons.js"></script>
-  <script type="module" src="../places-icons.js"></script>
-  <script type="module" src="../social-icons.js"></script>
+  <script src="../node_modules/@webcomponents/webcomponentsjs/webcomponents-bundle.js"></script>
+  <script src="../node_modules/wct-browser-legacy/browser.js"></script>
 
 </head>
 <body>
