--- a/demo/index.html
+++ b/demo/index.html
@@ -11,25 +11,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <html>
 <head>
   <title>iron-icons demo</title>
-  <script src="../../../@webcomponents/webcomponentsjs/webcomponents-bundle.js"></script>
-  <script type="module" src="../../paper-styles/demo-pages.js"></script>
-  <script type="module" src="../../paper-styles/color.js"></script>
-  <script type="module" src="../../iron-meta/iron-meta.js"></script>
-
-  <!-- load default iconset -->
-  <script type="module" src="../iron-icons.js"></script>
-
-  <!-- load the rest -->
-  <script type="module" src="../av-icons.js"></script>
-  <script type="module" src="../communication-icons.js"></script>
-  <script type="module" src="../device-icons.js"></script>
-  <script type="module" src="../editor-icons.js"></script>
-  <script type="module" src="../hardware-icons.js"></script>
-  <script type="module" src="../image-icons.js"></script>
-  <script type="module" src="../maps-icons.js"></script>
-  <script type="module" src="../notification-icons.js"></script>
-  <script type="module" src="../social-icons.js"></script>
-  <script type="module" src="../places-icons.js"></script>
+  <script src="https://unpkg.com/@webcomponents/webcomponentsjs@^2.0.0/webcomponents-loader.js"></script>
 </head>
 <body>
   <custom-style>
